changed dropdown button touser image and fixed nav bar alignment

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,7 @@
 }
 
 .navbar-brand{
-  margin-left: 9rem;
+  /*margin-left: 9rem;*/
 }
 
 .welcome-msg{
@@ -17,8 +17,10 @@
 
 .dropdown {
   float: right;
+  width: 50px;
+  height: 40px;
   /*overflow: hidden;*/
-  margin-right: 6rem;
+  /*margin-right: 6rem;*/
 }
 
 .dropdown .dropbtn:before {
@@ -30,11 +32,11 @@
   background-color: inherit;
   /*font-family: inherit;*/
   cursor: pointer;
-  content: "\f0d7";
+  /*content: "\f0d7";*/
   font-family: FontAwesome;
-    width: 4px;
-    margin-right: 70px;
-    margin-left: 5px;
+    /*width: 4px;*/
+    /*margin-right: 70px;*/
+    /*margin-left: 5px;*/
     height: 3px;
     padding-left: 2px;
     padding-right: 2px;
@@ -51,9 +53,9 @@
   cursor: pointer;
   /*margin-right: 50px;*/
   /*margin-left: 16px;*/
-    width: 4px;
-    margin-right: 70px;
-    margin-left: 5px;
+    /*width: 4px;*/
+    /*margin-right: 70px;*/
+    /*margin-left: 5px;*/
     height: 3px;
     padding-left: 2px;
     padding-right: 2px;
@@ -83,10 +85,10 @@
 
 
 .dropdown-content {
-  top: 41px;
+  top: 48px;
   display: none;
   position: absolute;
-  left: -7em;
+  left: -4em;
   background-color: #f9f9f9;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
